# auto-blog-formatter

./: .gitignore  .pre-commit-config.yaml  README.md  analyzer.py  config.json  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/: README.md
scripts/: update_dependencies.py
src/blog_formatter/: __init__.py  analyzer.py
src/blog_formatter/styles/: styles.css
tests/: test_analyzer.py
